@@ -61,6 +61,8 @@ Index of this file:
 
 #pragma once
 
+#include "imgui_export.hpp"
+
 // Configuration file with compile-time options
 // (edit imconfig.h or '#define IMGUI_USER_CONFIG "myfilename.h" from your build system)
 #ifdef IMGUI_USER_CONFIG
